# vnp-pip-package

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/vnp/: bigquery.py  logger.py  secret_manager.py  storage.py
